--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+    background-image: url(pexels-anete-lusina-5240548.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 .container {
